// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adaptResponse adapts empty response 1`] = `
{
  "rawResponse": {
    "meta": {
      "page": {
        "current": 1,
        "size": 5,
        "total_pages": 0,
        "total_results": 0,
      },
      "request_id": "wVlg15HbT0yyHJSJUlnHQw",
      "sources": {
        "621581b6174a804659f9dc16": {
          "name": "National parks",
          "service_type": "custom",
        },
      },
      "warnings": [],
    },
    "results": [],
  },
  "requestId": "wVlg15HbT0yyHJSJUlnHQw",
  "results": [],
  "totalPages": 0,
  "totalResults": 0,
}
`;

exports[`adaptResponse adapts facets with empty values 1`] = `
{
  "facets": {
    "world_heritage_site": [
      {
        "data": [
          {
            "count": 1,
            "value": "",
          },
        ],
        "field": "world_heritage_site",
        "type": "value",
      },
    ],
  },
  "rawResponse": {
    "facets": {
      "world_heritage_site": [
        {
          "data": [
            {
              "count": 1,
              "value": "",
            },
          ],
          "type": "value",
        },
      ],
    },
    "meta": {
      "page": {
        "current": 1,
        "size": 20,
        "total_pages": 1,
        "total_results": 1,
      },
      "request_id": "W6qPJzEBS0eoUnVG4FZTnw",
      "sources": {
        "621581b6174a804659f9dc16": {
          "name": "National parks",
          "service_type": "custom",
        },
      },
      "warnings": [
        "unknown result field 'image_url'",
      ],
    },
    "results": [
      {
        "_meta": {
          "content_source_id": "621581b6174a804659f9dc16",
          "id": "park_great-smoky-mountains",
          "last_updated": "2022-02-23T00:40:10+00:00",
          "score": 2.057784,
          "source": "custom",
        },
        "acres": {
          "raw": 522426.88,
        },
        "content_source_id": {
          "raw": "621581b6174a804659f9dc16",
        },
        "date_established": {
          "raw": "1934-06-15T05:00:00+00:00",
        },
        "description": {
          "snippet": "The Great Smoky Mountains, part of the Appalachian Mountains, span a wide range of elevations",
        },
        "id": {
          "raw": "park_great-smoky-mountains",
        },
        "last_updated": {
          "raw": "2022-02-23T00:40:10+00:00",
        },
        "location": {
          "raw": "35.68,-83.53",
        },
        "nps_link": {
          "raw": "https://www.nps.gov/grsm/index.htm",
        },
        "source": {
          "raw": "custom",
        },
        "square_km": {
          "raw": 2114.2,
        },
        "states": {
          "raw": [
            "Tennessee",
            "North Carolina",
          ],
        },
        "title": {
          "snippet": "Great Smoky Mountains",
        },
        "visitors": {
          "raw": 11312786,
        },
        "world_heritage_site": {
          "raw": "true",
        },
      },
    ],
  },
  "requestId": "W6qPJzEBS0eoUnVG4FZTnw",
  "results": [
    {
      "_meta": {
        "content_source_id": "621581b6174a804659f9dc16",
        "id": "park_great-smoky-mountains",
        "last_updated": "2022-02-23T00:40:10+00:00",
        "score": 2.057784,
        "source": "custom",
      },
      "acres": {
        "raw": 522426.88,
      },
      "content_source_id": {
        "raw": "621581b6174a804659f9dc16",
      },
      "date_established": {
        "raw": "1934-06-15T05:00:00+00:00",
      },
      "description": {
        "snippet": "The Great Smoky Mountains, part of the Appalachian Mountains, span a wide range of elevations",
      },
      "id": {
        "raw": "park_great-smoky-mountains",
      },
      "last_updated": {
        "raw": "2022-02-23T00:40:10+00:00",
      },
      "location": {
        "raw": "35.68,-83.53",
      },
      "nps_link": {
        "raw": "https://www.nps.gov/grsm/index.htm",
      },
      "source": {
        "raw": "custom",
      },
      "square_km": {
        "raw": 2114.2,
      },
      "states": {
        "raw": [
          "Tennessee",
          "North Carolina",
        ],
      },
      "title": {
        "snippet": "Great Smoky Mountains",
      },
      "visitors": {
        "raw": 11312786,
      },
      "world_heritage_site": {
        "raw": "true",
      },
    },
  ],
  "totalPages": 1,
  "totalResults": 1,
}
`;

exports[`adaptResponse adapts facets with zero values 1`] = `
{
  "facets": {
    "world_heritage_site": [
      {
        "data": [
          {
            "count": 1,
            "value": 0,
          },
        ],
        "field": "world_heritage_site",
        "type": "value",
      },
    ],
  },
  "rawResponse": {
    "facets": {
      "world_heritage_site": [
        {
          "data": [
            {
              "count": 1,
              "value": 0,
            },
          ],
          "type": "value",
        },
      ],
    },
    "meta": {
      "page": {
        "current": 1,
        "size": 20,
        "total_pages": 1,
        "total_results": 1,
      },
      "request_id": "W6qPJzEBS0eoUnVG4FZTnw",
      "sources": {
        "621581b6174a804659f9dc16": {
          "name": "National parks",
          "service_type": "custom",
        },
      },
      "warnings": [
        "unknown result field 'image_url'",
      ],
    },
    "results": [
      {
        "_meta": {
          "content_source_id": "621581b6174a804659f9dc16",
          "id": "park_great-smoky-mountains",
          "last_updated": "2022-02-23T00:40:10+00:00",
          "score": 2.057784,
          "source": "custom",
        },
        "acres": {
          "raw": 522426.88,
        },
        "content_source_id": {
          "raw": "621581b6174a804659f9dc16",
        },
        "date_established": {
          "raw": "1934-06-15T05:00:00+00:00",
        },
        "description": {
          "snippet": "The Great Smoky Mountains, part of the Appalachian Mountains, span a wide range of elevations",
        },
        "id": {
          "raw": "park_great-smoky-mountains",
        },
        "last_updated": {
          "raw": "2022-02-23T00:40:10+00:00",
        },
        "location": {
          "raw": "35.68,-83.53",
        },
        "nps_link": {
          "raw": "https://www.nps.gov/grsm/index.htm",
        },
        "source": {
          "raw": "custom",
        },
        "square_km": {
          "raw": 2114.2,
        },
        "states": {
          "raw": [
            "Tennessee",
            "North Carolina",
          ],
        },
        "title": {
          "snippet": "Great Smoky Mountains",
        },
        "visitors": {
          "raw": 11312786,
        },
        "world_heritage_site": {
          "raw": "true",
        },
      },
    ],
  },
  "requestId": "W6qPJzEBS0eoUnVG4FZTnw",
  "results": [
    {
      "_meta": {
        "content_source_id": "621581b6174a804659f9dc16",
        "id": "park_great-smoky-mountains",
        "last_updated": "2022-02-23T00:40:10+00:00",
        "score": 2.057784,
        "source": "custom",
      },
      "acres": {
        "raw": 522426.88,
      },
      "content_source_id": {
        "raw": "621581b6174a804659f9dc16",
      },
      "date_established": {
        "raw": "1934-06-15T05:00:00+00:00",
      },
      "description": {
        "snippet": "The Great Smoky Mountains, part of the Appalachian Mountains, span a wide range of elevations",
      },
      "id": {
        "raw": "park_great-smoky-mountains",
      },
      "last_updated": {
        "raw": "2022-02-23T00:40:10+00:00",
      },
      "location": {
        "raw": "35.68,-83.53",
      },
      "nps_link": {
        "raw": "https://www.nps.gov/grsm/index.htm",
      },
      "source": {
        "raw": "custom",
      },
      "square_km": {
        "raw": 2114.2,
      },
      "states": {
        "raw": [
          "Tennessee",
          "North Carolina",
        ],
      },
      "title": {
        "snippet": "Great Smoky Mountains",
      },
      "visitors": {
        "raw": 11312786,
      },
      "world_heritage_site": {
        "raw": "true",
      },
    },
  ],
  "totalPages": 1,
  "totalResults": 1,
}
`;

exports[`adaptResponse adapts response 1`] = `
{
  "facets": {
    "world_heritage_site": [
      {
        "data": [
          {
            "count": 1,
            "value": "true",
          },
        ],
        "field": "world_heritage_site",
        "type": "value",
      },
    ],
  },
  "rawResponse": {
    "facets": {
      "world_heritage_site": [
        {
          "data": [
            {
              "count": 1,
              "value": "true",
            },
          ],
          "type": "value",
        },
      ],
    },
    "meta": {
      "page": {
        "current": 1,
        "size": 20,
        "total_pages": 1,
        "total_results": 1,
      },
      "request_id": "W6qPJzEBS0eoUnVG4FZTnw",
      "sources": {
        "621581b6174a804659f9dc16": {
          "name": "National parks",
          "service_type": "custom",
        },
      },
      "warnings": [
        "unknown result field 'image_url'",
      ],
    },
    "results": [
      {
        "_meta": {
          "content_source_id": "621581b6174a804659f9dc16",
          "id": "park_great-smoky-mountains",
          "last_updated": "2022-02-23T00:40:10+00:00",
          "score": 2.057784,
          "source": "custom",
        },
        "acres": {
          "raw": 522426.88,
        },
        "content_source_id": {
          "raw": "621581b6174a804659f9dc16",
        },
        "date_established": {
          "raw": "1934-06-15T05:00:00+00:00",
        },
        "description": {
          "snippet": "The Great Smoky Mountains, part of the Appalachian Mountains, span a wide range of elevations",
        },
        "id": {
          "raw": "park_great-smoky-mountains",
        },
        "last_updated": {
          "raw": "2022-02-23T00:40:10+00:00",
        },
        "location": {
          "raw": "35.68,-83.53",
        },
        "nps_link": {
          "raw": "https://www.nps.gov/grsm/index.htm",
        },
        "source": {
          "raw": "custom",
        },
        "square_km": {
          "raw": 2114.2,
        },
        "states": {
          "raw": [
            "Tennessee",
            "North Carolina",
          ],
        },
        "title": {
          "snippet": "Great Smoky Mountains",
        },
        "visitors": {
          "raw": 11312786,
        },
        "world_heritage_site": {
          "raw": "true",
        },
      },
    ],
  },
  "requestId": "W6qPJzEBS0eoUnVG4FZTnw",
  "results": [
    {
      "_meta": {
        "content_source_id": "621581b6174a804659f9dc16",
        "id": "park_great-smoky-mountains",
        "last_updated": "2022-02-23T00:40:10+00:00",
        "score": 2.057784,
        "source": "custom",
      },
      "acres": {
        "raw": 522426.88,
      },
      "content_source_id": {
        "raw": "621581b6174a804659f9dc16",
      },
      "date_established": {
        "raw": "1934-06-15T05:00:00+00:00",
      },
      "description": {
        "snippet": "The Great Smoky Mountains, part of the Appalachian Mountains, span a wide range of elevations",
      },
      "id": {
        "raw": "park_great-smoky-mountains",
      },
      "last_updated": {
        "raw": "2022-02-23T00:40:10+00:00",
      },
      "location": {
        "raw": "35.68,-83.53",
      },
      "nps_link": {
        "raw": "https://www.nps.gov/grsm/index.htm",
      },
      "source": {
        "raw": "custom",
      },
      "square_km": {
        "raw": 2114.2,
      },
      "states": {
        "raw": [
          "Tennessee",
          "North Carolina",
        ],
      },
      "title": {
        "snippet": "Great Smoky Mountains",
      },
      "visitors": {
        "raw": 11312786,
      },
      "world_heritage_site": {
        "raw": "true",
      },
    },
  ],
  "totalPages": 1,
  "totalResults": 1,
}
`;

exports[`adaptResponse will accept additional facet value fields to inject into response 1`] = `
{
  "facets": {
    "world_heritage_site": [
      {
        "data": [
          {
            "count": 1,
            "value": "true",
          },
        ],
        "field": "world_heritage_site",
        "type": "value",
      },
    ],
  },
  "rawResponse": {
    "facets": {
      "world_heritage_site": [
        {
          "data": [
            {
              "count": 1,
              "value": "true",
            },
          ],
          "type": "value",
        },
      ],
    },
    "meta": {
      "page": {
        "current": 1,
        "size": 20,
        "total_pages": 1,
        "total_results": 1,
      },
      "request_id": "W6qPJzEBS0eoUnVG4FZTnw",
      "sources": {
        "621581b6174a804659f9dc16": {
          "name": "National parks",
          "service_type": "custom",
        },
      },
      "warnings": [
        "unknown result field 'image_url'",
      ],
    },
    "results": [
      {
        "_meta": {
          "content_source_id": "621581b6174a804659f9dc16",
          "id": "park_great-smoky-mountains",
          "last_updated": "2022-02-23T00:40:10+00:00",
          "score": 2.057784,
          "source": "custom",
        },
        "acres": {
          "raw": 522426.88,
        },
        "content_source_id": {
          "raw": "621581b6174a804659f9dc16",
        },
        "date_established": {
          "raw": "1934-06-15T05:00:00+00:00",
        },
        "description": {
          "snippet": "The Great Smoky Mountains, part of the Appalachian Mountains, span a wide range of elevations",
        },
        "id": {
          "raw": "park_great-smoky-mountains",
        },
        "last_updated": {
          "raw": "2022-02-23T00:40:10+00:00",
        },
        "location": {
          "raw": "35.68,-83.53",
        },
        "nps_link": {
          "raw": "https://www.nps.gov/grsm/index.htm",
        },
        "source": {
          "raw": "custom",
        },
        "square_km": {
          "raw": 2114.2,
        },
        "states": {
          "raw": [
            "Tennessee",
            "North Carolina",
          ],
        },
        "title": {
          "snippet": "Great Smoky Mountains",
        },
        "visitors": {
          "raw": 11312786,
        },
        "world_heritage_site": {
          "raw": "true",
        },
      },
    ],
  },
  "requestId": "W6qPJzEBS0eoUnVG4FZTnw",
  "results": [
    {
      "_meta": {
        "content_source_id": "621581b6174a804659f9dc16",
        "id": "park_great-smoky-mountains",
        "last_updated": "2022-02-23T00:40:10+00:00",
        "score": 2.057784,
        "source": "custom",
      },
      "acres": {
        "raw": 522426.88,
      },
      "content_source_id": {
        "raw": "621581b6174a804659f9dc16",
      },
      "date_established": {
        "raw": "1934-06-15T05:00:00+00:00",
      },
      "description": {
        "snippet": "The Great Smoky Mountains, part of the Appalachian Mountains, span a wide range of elevations",
      },
      "id": {
        "raw": "park_great-smoky-mountains",
      },
      "last_updated": {
        "raw": "2022-02-23T00:40:10+00:00",
      },
      "location": {
        "raw": "35.68,-83.53",
      },
      "nps_link": {
        "raw": "https://www.nps.gov/grsm/index.htm",
      },
      "source": {
        "raw": "custom",
      },
      "square_km": {
        "raw": 2114.2,
      },
      "states": {
        "raw": [
          "Tennessee",
          "North Carolina",
        ],
      },
      "title": {
        "snippet": "Great Smoky Mountains",
      },
      "visitors": {
        "raw": 11312786,
      },
      "world_heritage_site": {
        "raw": "true",
      },
    },
  ],
  "totalPages": 1,
  "totalResults": 1,
}
`;

exports[`adaptResponse will limit total pages to 100 1`] = `
{
  "facets": {
    "world_heritage_site": [
      {
        "data": [
          {
            "count": 1,
            "value": "true",
          },
        ],
        "field": "world_heritage_site",
        "type": "value",
      },
    ],
  },
  "rawResponse": {
    "facets": {
      "world_heritage_site": [
        {
          "data": [
            {
              "count": 1,
              "value": "true",
            },
          ],
          "type": "value",
        },
      ],
    },
    "meta": {
      "page": {
        "current": 1,
        "size": 20,
        "total_pages": 5000,
        "total_results": 100000,
      },
      "request_id": "W6qPJzEBS0eoUnVG4FZTnw",
      "sources": {
        "621581b6174a804659f9dc16": {
          "name": "National parks",
          "service_type": "custom",
        },
      },
      "warnings": [
        "unknown result field 'image_url'",
      ],
    },
    "results": [
      {
        "_meta": {
          "content_source_id": "621581b6174a804659f9dc16",
          "id": "park_great-smoky-mountains",
          "last_updated": "2022-02-23T00:40:10+00:00",
          "score": 2.057784,
          "source": "custom",
        },
        "acres": {
          "raw": 522426.88,
        },
        "content_source_id": {
          "raw": "621581b6174a804659f9dc16",
        },
        "date_established": {
          "raw": "1934-06-15T05:00:00+00:00",
        },
        "description": {
          "snippet": "The Great Smoky Mountains, part of the Appalachian Mountains, span a wide range of elevations",
        },
        "id": {
          "raw": "park_great-smoky-mountains",
        },
        "last_updated": {
          "raw": "2022-02-23T00:40:10+00:00",
        },
        "location": {
          "raw": "35.68,-83.53",
        },
        "nps_link": {
          "raw": "https://www.nps.gov/grsm/index.htm",
        },
        "source": {
          "raw": "custom",
        },
        "square_km": {
          "raw": 2114.2,
        },
        "states": {
          "raw": [
            "Tennessee",
            "North Carolina",
          ],
        },
        "title": {
          "snippet": "Great Smoky Mountains",
        },
        "visitors": {
          "raw": 11312786,
        },
        "world_heritage_site": {
          "raw": "true",
        },
      },
    ],
  },
  "requestId": "W6qPJzEBS0eoUnVG4FZTnw",
  "results": [
    {
      "_meta": {
        "content_source_id": "621581b6174a804659f9dc16",
        "id": "park_great-smoky-mountains",
        "last_updated": "2022-02-23T00:40:10+00:00",
        "score": 2.057784,
        "source": "custom",
      },
      "acres": {
        "raw": 522426.88,
      },
      "content_source_id": {
        "raw": "621581b6174a804659f9dc16",
      },
      "date_established": {
        "raw": "1934-06-15T05:00:00+00:00",
      },
      "description": {
        "snippet": "The Great Smoky Mountains, part of the Appalachian Mountains, span a wide range of elevations",
      },
      "id": {
        "raw": "park_great-smoky-mountains",
      },
      "last_updated": {
        "raw": "2022-02-23T00:40:10+00:00",
      },
      "location": {
        "raw": "35.68,-83.53",
      },
      "nps_link": {
        "raw": "https://www.nps.gov/grsm/index.htm",
      },
      "source": {
        "raw": "custom",
      },
      "square_km": {
        "raw": 2114.2,
      },
      "states": {
        "raw": [
          "Tennessee",
          "North Carolina",
        ],
      },
      "title": {
        "snippet": "Great Smoky Mountains",
      },
      "visitors": {
        "raw": 11312786,
      },
      "world_heritage_site": {
        "raw": "true",
      },
    },
  ],
  "totalPages": 100,
  "totalResults": 100000,
}
`;
